--- a/extension/Info.plist
+++ b/extension/Info.plist
@@ -40,11 +40,11 @@
 			<key>Action</key>
 			<string>Popover</string>
 			<key>Identifier</key>
-			<string>Button</string>
+			<string>PassafariButton</string>
 			<key>Image</key>
 			<string>ToolbarItemIcon.pdf</string>
 			<key>Label</key>
-			<string>Your Button</string>
+			<string>Passafari</string>
 		</dict>
 		<key>SFSafariWebsiteAccess</key>
 		<dict>
