--- a/extension/extension.entitlements
+++ b/extension/extension.entitlements
@@ -4,5 +4,9 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>$(TeamIdentifierPrefix)de.artursterz.passafari</string>
+	</array>
 </dict>
 </plist>
