--- a/passafari/passafari.entitlements
+++ b/passafari/passafari.entitlements
@@ -4,8 +4,12 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
-    <key>com.apple.security.files.bookmarks.app-scope</key>
-    <true/> 
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>$(TeamIdentifierPrefix)de.artursterz.passafari</string>
+	</array>
+	<key>com.apple.security.files.bookmarks.app-scope</key>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
 </dict>
