Add simple toas message for shortcut password fill
Since it is not possible to use the extensions popover on shortcut, we use a simple custom CSS/HTML/JS based toast.

--- a/extension/Info.plist
+++ b/extension/Info.plist
@@ -46,6 +46,13 @@
 			<key>Label</key>
 			<string>Passafari</string>
 		</dict>
+		<key>SFSafariStyleSheet</key>
+		<array>
+			<dict>
+				<key>Style Sheet</key>
+				<string>passafariToast.css</string>
+			</dict>
+		</array>
 		<key>SFSafariWebsiteAccess</key>
 		<dict>
 			<key>Allowed Domains</key>
