--- a/passafari/passafari.entitlements
+++ b/passafari/passafari.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>$(TeamIdentifierPrefix)de.artursterz.passafari</string>
+		<string>group.de.artursterz.passafari</string>
 	</array>
 	<key>com.apple.security.files.bookmarks.app-scope</key>
 	<true/>
