--- a/extension/Info.plist
+++ b/extension/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Passafari</string>
+	<string>Pass for macOS</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -32,14 +32,14 @@
 		<array>
 			<dict>
 				<key>Script</key>
-				<string>passafariFillForm.js</string>
+				<string>passformacosFillForm.js</string>
 			</dict>
 		</array>
 		<key>SFSafariStyleSheet</key>
 		<array>
 			<dict>
 				<key>Style Sheet</key>
-				<string>passafariToast.css</string>
+				<string>passformacosToast.css</string>
 			</dict>
 		</array>
 		<key>SFSafariToolbarItem</key>
@@ -47,11 +47,11 @@
 			<key>Action</key>
 			<string>Popover</string>
 			<key>Identifier</key>
-			<string>PassafariButton</string>
+			<string>PassformacosButton</string>
 			<key>Image</key>
 			<string>ToolbarItemIcon.pdf</string>
 			<key>Label</key>
-			<string>Passafari</string>
+			<string>Pass for macOS</string>
 		</dict>
 		<key>SFSafariWebsiteAccess</key>
 		<dict>
@@ -66,6 +66,6 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2018 Artur Sterz. All rights reserved.</string>
 	<key>NSHumanReadableDescription</key>
-	<string>Passafari is a Safari extension for zx2c4's pass, the standard UNIX password manager.</string>
+	<string>Pass for macOS is a macOS wrapper for zx2c4&apos;s pass, the standard UNIX password manager.</string>
 </dict>
 </plist>
