--- a/extension/extension.entitlements
+++ b/extension/extension.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.de.artursterz.passafari</string>
+		<string>group.de.artursterz.passformacos</string>
 	</array>
 </dict>
 </plist>
