--- a/passformacos/passformacos.entitlements
+++ b/passformacos/passformacos.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.de.artursterz.passafari</string>
+		<string>group.de.artursterz.passformacos</string>
 	</array>
 </dict>
 </plist>
