Actions: fix wrongly closed braces in deploy.yaml

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,8 +32,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }
-          release_name: ${{ github.ref }-beta
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}-beta
           bodyFromFile: ./.github/templates/release_notes.md
           draft: true
           prerelease: true
