Downgrade package dependency due to missing support in github actions

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,7 +8,7 @@ name: Deploy Pass for macOS
 jobs:
   build:
     name: Deploy
-    runs-on: macOS-11.6
+    runs-on: macos-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
